# ChangeLog for x11-wm/matwm2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*matwm2-0.0.68 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +matwm2-0.0.68.ebuild,
  +files/matwm2-0.0.68-build_fixes.patch, +metadata.xml:
  Initial ebuild, by me.
