@@ -1,0 +1,22 @@
+x11-proto/xextproto
+x11-libs/libXext
+0
+http://www.gatorgitter.com/~maties//matwm2-0.0.75.tar.gz
+
+http://www.gatorgitter.com/~maties/
+MIT
+Simple EWMH compatible window manager with titlebars and frames
+~amd64
+eutils multilib portability toolchain-funcs
+
+
+
+
+2
+
+compile install prepare
+
+
+
+
+
