@@ -35,5 +35,7 @@ REM 2009-10-22 +1 MSG Stabilise amd64 x11-wm/parti-0.0.6
 REM 2009-11-07 +1 MSG Stabilise amd64 x11-wm/subtle-0.8.1192
 REM 2009-11-07 +1 MSG Stabilise x86 x11-wm/subtle-0.8.1192
 REM 2009-12-12 +1 MSG Stabilise amd64 app-text/apvlv-0.0.7.4
+REM 2009-12-12 +1 MSG Stabilise amd64 x11-wm/matwm2-0.0.75
+REM 2009-12-12 +1 MSG Stabilise x86 x11-wm/matwm2-0.0.75
 
 # vim: set sw=4 sts=4 et tw=80 fenc=utf-8 ft=remind:
