@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX matwm2-0.0.68-build_fixes.patch 487 RMD160 80e075922348e6a49caf33c5165c2d7056a7be54 SHA1 0dcc9ab5544397d1b9d8d516a267028be9f31de7 SHA256 a9142a4732ee37be70878c3f90ed5e48c5ae5a7aa50d93a84131d84786515e33
 DIST matwm2-0.0.68.tar.gz 34587 RMD160 acfc4fc3e40ce820577445b1a2b32f85e5af79bd SHA1 3eb22e411643bcf325bc5a9fda1efe063c1dd845 SHA256 11f9cef0d4d2cf069f27a0e8d46faf2e41ae9a5f11bab38eddfeb5d5c2fea9fc
+DIST matwm2-0.0.75.tar.gz 36278 RMD160 faa5c6ef5b9a4d28758f5697fe539f14452cb2e7 SHA1 0a7763f52049225b4078db71c32e9389d65f7e0d SHA256 524f667b636aed04052e64fbff17243b1c08b09b8726b2eb4e9485455d2dfd26
 EBUILD matwm2-0.0.68.ebuild 651 RMD160 c64c8544f1aabe3a90ac7e6a6b4ae200b9960050 SHA1 623e5b4ea058d88842b8400e2cab6c90ae1aec54 SHA256 530d800260ab9fdc6a678bf40a2ff520632d9f0e42456f5f74c57623332ae42a
-MISC ChangeLog 295 RMD160 24b04c2279855126ce65bb39d3341af4f9237201 SHA1 ad1527c84efa0f571ca7cad4485cc008a23369b9 SHA256 f0534f9bb86dd02881c4ec8cc48fac8f6fa0f58523ceacdc327ee5b9746b7904
+EBUILD matwm2-0.0.75.ebuild 651 RMD160 c64c8544f1aabe3a90ac7e6a6b4ae200b9960050 SHA1 623e5b4ea058d88842b8400e2cab6c90ae1aec54 SHA256 530d800260ab9fdc6a678bf40a2ff520632d9f0e42456f5f74c57623332ae42a
+MISC ChangeLog 416 RMD160 197e390c9dbe3e3c307b6d21c572db18d01d3520 SHA1 4622ca97a01c9b1d9b0e126f79057f12dbbfdcce SHA256 e37b5ec15efdc7ca794d4e414c89007f9042a6aad91e0e1c6ad1323809d96991
 MISC metadata.xml 1036 RMD160 6bd64976e518ed63d17d3f7344576dacaf41aa1d SHA1 da1e482613addf24640886c9df9ac6fe9a900f88 SHA256 bb4a69982292ba18a9dec436e2fbf259381e08cb772058874ae087adf77147d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrKxHUACgkQzJrj3cAXR0nHhgCgkIyx4NbBPwmjQ01YeQneakgT
-MLAAn3A7AoluZGf6kDC5stH2/1BhGtuu
-=eMjX
+iEYEARECAAYFAkrT/R0ACgkQzJrj3cAXR0nrbwCgpO5mxtV+o1Bcn5xeIvI2B83t
+PSwAn1Pb6GcDXP1HzE1fIfFNCX932qXX
+=dEwp
 -----END PGP SIGNATURE-----
